# lightning-ui

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  index.html
.github/workflows/: deploy.yml  test.yml
nix/: shell.nix
nix/checks/: flake-module.nix
nix/pkgs/: flake-module.nix  lightning-gui.nix
src/: about.rs  api.rs  connect.rs  home.rs  main.rs  storage.rs
