[package]
name = "lightning-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
sycamore = { version = "0.8", features = [ "suspense" ] }
sycamore-router = "0.8"
log = "0.4.17"
console_log = "0.2"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.11", features = ["json"] }
anyhow = { version = "1.0.69", features = [ "backtrace" ] }
web-sys = { version = "0.3.60", features = [ "Storage" ] }
# api = { path = "../lightning-knd/api" }
api = { git = "https://github.com/kuutamolabs/lightning-knd", package = "api", rev = "f2cf30153239b746fb8c589ac6f0a741490bb918"}

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 's' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true

